Bug 242071 - AX ITM: Retrieving table column and row headers is broken in isolated tree mode.
Summary: AX ITM: Retrieving table column and row headers is broken in isolated tree mode.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Andres Gonzalez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-28 11:22 PDT by Andres Gonzalez
Modified: 2022-06-28 18:31 PDT (History)
10 users (show)

See Also:


Attachments
Patch (4.96 KB, patch)
2022-06-28 12:46 PDT, Andres Gonzalez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andres Gonzalez 2022-06-28 11:22:07 PDT
This was a regression introduced with commit a5399967.
Comment 1 Radar WebKit Bug Importer 2022-06-28 11:22:19 PDT
<rdar://problem/96077212>
Comment 2 Andres Gonzalez 2022-06-28 12:46:10 PDT
Created attachment 460524 [details]
Patch
Comment 3 EWS 2022-06-28 18:31:47 PDT
Committed 251939@main (ed7a8fef47e7): <https://commits.webkit.org/251939@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 460524 [details].