AX ITM: Retrieving table column and row headers is broken in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=242071

Reviewed by Chris Fleizach.

Fixes ~11 table related tests in ITM.

AXIsolatedObject::getOrRetrievePropertyValue was returning an empty Vector for ColumnHeaders and RowHeaders because we store a Vector of AXIDs, not a Vector of objects. The fix is to convert the retrieved Vector of AXID into objects.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):
(WebCore::AXIsolatedObject::columnHeaders):
(WebCore::AXIsolatedObject::rowHeaders):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
(WebCore::AXIsolatedObject::propertyValue const):
Assert that the type of the value stored in the property map matches the requested type.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::queueChange):
Removed no longer valid ASSERT.

Canonical link: https://commits.webkit.org/251939@main